# senda

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  _quarto.yml  alembic.ini  compound-engineering.local.md  docker-compose.yml
alembic/: README  env.py
api/: celery_app.py  config.py  database.py  limiter.py  main.py  pyproject.toml
api/dependencies/: auth.py
api/models/: dataset.py  documento.py  ejecucion_error.py  sesion_refresh.py  usuario.py
api/routers/: auth.py  datasets.py  documentos.py  ejecutar.py  health.py  retroalimentacion.py
api/schemas/: auth.py  dataset.py  documento.py  ejecutar.py  retroalimentacion.py
api/services/: auth_service.py  execution_pool.py  feedback_rate_limiter.py  llm_feedback.py  qmd_serializer.py  renderer.py  storage.py
api/tasks/: cleanup.py  render_task.py
api/tests/integration/: conftest.py  test_auth.py  test_documentos.py
api/tests/unit/: test_auth_router.py  test_auth_service.py  test_cleanup_task.py  test_feedback_rate_limiter.py  test_health.py  test_llm_feedback.py  test_qmd_serializer.py
api/ws/: render_status.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.python-geo  Dockerfile.r-geo  Dockerfile.worker
docs/: ejemplo.qmd
frontend/: package-lock.json  package.json  vite.config.ts
nginx/: dev.conf
todos/: 001-complete-p1-worker-import-paths-and-wrong-task-symbol.md  002-complete-p1-cleanup-task-kills-active-containers.md  003-complete-p1-render-task-retry-commits-failed-state.md  004-complete-p1-container-pool-release-race-condition.md  011-pending-p3-misc-code-quality.md  (+41 more)
(+46 files in other folders)
